--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -10,7 +10,7 @@
 
 <script>  
 window.addEventListener("load", function(evt) {
-
+    document.getElementById("spinner").style.display = 'none';
     var output = document.getElementById("output");
     var input = document.getElementById("input");
     var ws;
@@ -38,6 +38,14 @@ window.addEventListener("load", function(evt) {
         }
         ws.onmessage = function(evt) {
 			if (evt.data.startsWith('{') && evt.data.endsWith('}')){
+                var feedback = JSON.parse(evt.data);
+                if (feedback.action == "loading"){
+                    if (feedback.done == true) {
+                        document.getElementById("spinner").style.display = 'none';
+                    } else {
+                        document.getElementById("spinner").style.display = 'block';
+                    }
+                }
 				print(evt.data)
 			}else{
 				var ctx = document.getElementById('canvas').getContext('2d');
@@ -148,6 +156,9 @@ window.addEventListener("load", function(evt) {
   </div>
   <div class="row">
     <div class="col">
+    <div id="spinner" class="spinner-border" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
 <canvas id="canvas" width="800" height="800">
 </canvas>
     </div>
@@ -158,7 +169,6 @@ window.addEventListener("load", function(evt) {
     </div>
   </div>
 </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
