added new commands

--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -3,48 +3,63 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">-->
+    <meta name="viewport" content="user-scalable=no, user-scalable=0, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://{{.}}/static/style.css">
     <script src="http://{{.}}/static/viewer.js" host="ws://{{.}}/webg3n"></script>
 </head>
-<body>
 
-<div class="container">
-<div class="jumbotron">
-  <h1 class="display-4">g3n Server Side</h1>
-  <p class="lead">This is a simple g3n server side example. Click connect to start.</p>
-  <hr class="my-4">
-  <button type="button" id="open" class="btn btn-primary">Connect to Server</button>
-  <button type="button" id="close" class="btn btn-secondary">Close Connection</button>
-</div>
-  <div class="row">
-    <div class="col">
 
-<div class="input-group mb-3">
-  <input type="text" class="form-control" id="input" placeholder="20" aria-label="20" aria-describedby="button-addon2">
-  <div class="input-group-append">
-    <button class="btn btn-outline-secondary" id="send" type="button" id="button-addon2">Set Field of View</button>
-  </div>
-</div>
+ <body class="d-flex flex-column h-100">
+    <div class="header">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#"><h2>webg3n</h2></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <button type="button" id="open" class="btn btn-primary">Connect to Server</button>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="cmd_perspective"  href="#">Perspective</a>
+        </li><li class="nav-item">
+          <a class="nav-link" id="cmd_parallel"  href="#">Parallel</a>
+        </li><li class="nav-item">
+          <a class="nav-link" id="cmd_hide"  href="#">Hide</a>
+        </li><li class="nav-item">
+          <a class="nav-link" id="cmd_unhideall"  href="#">Unhide all</a>
+        </li><li class="nav-item">
+          <a class="nav-link" id="cmd_focus"  href="#">Focus</a>
+        </li><li class="nav-item">
+          <a class="nav-link" id="cmd_viewtop"  href="#">Top View</a>
+        </li>
+            <div id="spinner" class="spinner-border text-primary" role="status">
+      <span class="sr-only">Loading...</span>
+    </div> 
+      </ul>
+      <form class="form-inline mt-2 mt-md-0">
+        <button type="button" id="close" class="btn btn-secondary">Close Connection</button>
+      </form>  
     </div>
-  </div>
-  <div class="row">
-    <div class="col">
-    <div id="spinner" class="spinner-border" role="status">
-  <span class="sr-only">Loading...</span>
+  </nav>
 </div>
-<canvas id="canvas" width="800" height="800">
-</canvas>
-    </div>
-    <div class="col">
-<ul class="list-group" id="output">
-  <li class="list-group-item">Command Log:</li>
-</ul>
-    </div>
+
+<main role="main" class="flex-shrink-0">
+ 
+  <div class="container">
+    <canvas id="canvas" width="900" height="700"></canvas>
   </div>
-</div>
+</main>
+
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted" id="selection">No selection</span>
+  </div>
+</footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
