--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="http://{{.}}/static/style.css">
-    <script src="http://{{.}}/static/viewer.js" host="ws://{{.}}/webg3n"></script>
+    <script src="http://{{.}}/static/webg3n.js" host="ws://{{.}}/webg3n"></script>
 </head>
 
 
