--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -6,7 +6,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">-->
     <meta name="viewport" content="user-scalable=no, user-scalable=0, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="static/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
     <script src="static/webg3n.js" host="ws://{{.}}/webg3n"></script>
 </head>
