--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -67,6 +67,7 @@
     <label for="img_saturation">Saturation</label><input type="range" class="custom-range" id="img_saturation" value="0" min="-100" max="100">
     <label for="img_contrast">Contrast</label><input type="range" class="custom-range" id="img_contrast" value="0" min="-100" max="100">
     <label for="img_blur">Blur</label><input type="range" class="custom-range" id="img_blur" value="0" min="0" max="20">
+    <label for="img_pixel">Pixelation</label><input type="range" class="custom-range" id="img_pixel" value="1.0" step="0.1" min="1.0" max="10.0">
     <button class="dropdown-item" id="cmd_imagesettings" type="button">Apply</button>
     <button class="dropdown-item" id="cmd_imageinvert" type="button">Toggle Invert</button>
     <button class="dropdown-item" id="cmd_resetimagesettings" type="button">Reset</button>
