minor css fixes

--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -13,13 +13,13 @@
 </head>
 
 
- <body class="d-flex flex-column h-100">
+ <body>
     <div class="header">
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#"><h2>webg3n</h2></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#"><h2>webg3n</h2></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -87,9 +87,9 @@
   </nav>
 </div>
 
-<main role="main" class="flex-shrink-0">
+<main role="main">
  
-  <div class="container">
+  <div class="container-for-canvas">
     <canvas id="canvas"></canvas>
   </div>
 </main>
