--- a/static/style.css
+++ b/static/style.css
@@ -15,10 +15,11 @@ main > .container {
     top: 0;
     width: 100%;
   }
-  .container {
+  .container-for-canvas {
     position: absolute;
     width: 100%;
     height: 100%;
+    padding: 80px 50px 55px 50px;
   }  
   .footer > .container {
     padding-right: 15px;
@@ -28,5 +29,3 @@ main > .container {
   code {
     font-size: 80%;
   }
-
-  
