debug toggle added for bytegraph

--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -55,6 +55,7 @@
     <button class="dropdown-item" id="cmd_qlow" type="button">Low</button>
     <button class="dropdown-item" id="cmd_qmid" type="button">Mid</button>
     <button class="dropdown-item" id="cmd_qhigh" type="button">High</button>
+    <button class="dropdown-item" id="cmd_debug" type="button">Debug</button>
   </div>
 </div>
 
