adding video tag

--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -108,7 +108,9 @@
   <main role="main">
 
     <div class="container-for-canvas">
-      <canvas id="canvas"></canvas>
+      <canvas id="canvas">
+        <video id="v" height="100%" width="100%" autoplay> </video>
+      </canvas>
     </div>
   </main>
   <div class="dropdown-menu dropdown-menu-sm" id="context-menu">
