--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="static/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
   <script src="static/jquery.js" crossorigin="anonymous"></script>
+  <script src="static/jmuxer.min.js"></script>
   <script src="static/webg3n.js" host="ws://{{.}}/webg3n"></script>
 </head>
 
@@ -108,8 +109,9 @@
   <main role="main">
 
     <div class="container-for-canvas">
+      <video style="border: 1px solid #333; width: 100%; height: 100%" autoplay id="player"></video>
       <canvas id="canvas">
-        <video id="v" height="100%" width="100%" autoplay> </video>
+
       </canvas>
     </div>
   </main>
