--- a/static/style.css
+++ b/static/style.css
@@ -29,3 +29,10 @@ main > .container {
   code {
     font-size: 80%;
   }
+
+  #canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+  }
