--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -110,9 +110,7 @@
 
     <div class="container-for-canvas">
       <video style="border: 1px solid #333; width: 100%; height: 100%" autoplay id="player"></video>
-      <canvas id="canvas">
-
-      </canvas>
+      <canvas id="canvas"></canvas>
     </div>
   </main>
   <div class="dropdown-menu dropdown-menu-sm" id="context-menu">
