--- a/templates/webg3n.html
+++ b/templates/webg3n.html
@@ -109,8 +109,9 @@
   <main role="main">
 
     <div class="container-for-canvas">
-      <video style="border: 1px solid #333; width: 100%; height: 100%" autoplay id="player"></video>
+
       <canvas id="canvas"></canvas>
+      <video id="player" autoplay></video>
     </div>
   </main>
   <div class="dropdown-menu dropdown-menu-sm" id="context-menu">
